--- a/style.css
+++ b/style.css
@@ -1,55 +1,91 @@
-* {
-  box-sizing: border-box;
+body {
   margin: 0;
-  padding: 0;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: black;
+  color: white;
 }
-
-.navbar {
-  background: #070707;
-  height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2rem;
-  position: sticky;
-  top: 0;
-  z-index: 999;
+.topnav {
+  background-color: rgb(73, 0, 0);
+  overflow: hidden;
+  border-bottom: 5px solid black;
+  opacity: 0.9;
+  transition-duration: 1s;
 }
-
-.navbar__container {
-  display: flex;
-  justify-content: space-between;
-  height: 80px;
-  z-index: 1;
-  width: 100%;
-  max-width: 1300px;
-  margin: 0 auto;
-  padding: 0 50px;
-}
-
-#navbar__logo {
-  background-color: #ff8177;
-  background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
-  background-size: 100%;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
-  display: flex;
-  align-items: center;
+.topnav:hover {
+  opacity: 1;
   cursor: pointer;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 17px;
 }
 
-.fa-gem {
-  margin-right: 0.5rem;
+.topnav a:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(73, 0, 0);
 }
 
-.navbar__menu {
-  display: flex;
-  align-items: center;
-  list-style: none;
+.topnav a.active {
+  background-color: #000000;
+  color: white;
+}
+
+.container {
+  position: relative;
+  text-align: center;
+  width: 100% !important;
+  color: white;
+  background-color: black;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  color: white;
+  padding: 60px;
+  font-size: 30px;
+  opacity: 0.9;
+  transition-duration: 1s;
+}
+
+.centered:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.omeni {
+  background-color: black;
+  color: white;
+  font-size: 15px;
+  padding: 60px;
+  text-align: center;
+  width: 100%;
+  overflow: auto;
+}
+
+#slikaomeni {
+  height: 300px;
+  width: 300px;
+  padding-bottom: 15px;
+}
+
+.kontakt {
+  margin-top: 20px;
+  background-color: rgb(73, 0, 0);
+  color: white;
+  font-size: 15px;
+  padding: 60px;
+  text-align: center;
+  width: 100%;
+  overflow: auto;
   text-align: center;
 }
